fix: Cards tamaño perfecto 150px con toda info visible

--- a/src/styles/NAVBAR-BUTTONS-FIXED.css
+++ b/src/styles/NAVBAR-BUTTONS-FIXED.css
@@ -631,7 +631,7 @@
 @media (max-height: 700px) {
   /* iPhone mini - cards un poco más pequeñas */
   .gpMatchCard {
-    min-height: 112px !important;
+    min-height: 90px !important;
     padding: 5px !important;
   }
   
@@ -649,7 +649,7 @@
 @media (min-height: 850px) {
   /* iPhone grande - cards más espaciosas */
   .gpMatchCard {
-    min-height: 128px !important;
+    min-height: 100px !important;
     padding: 7px !important;
   }
   
